[project]
name = "pandora"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Anthony", email = "drakarta3@gmail.com"},
]
dependencies = ["discord-py>=2.4.0", "pytz>=2025.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
